Fix: Asset routing, session persistence, and header buffering for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -4,17 +4,18 @@
             "runtime": "vercel-php@0.7.1"
         }
     },
-    "routes": [
+    "cleanUrls": true,
+    "rewrites": [
         {
-            "src": "/(.*\\.(css|js|png|jpg|jpeg|svg|mp4|gif|ico))",
-            "dest": "/public/$1"
+            "source": "/(css|js|assets|uploads)/(.*)",
+            "dest": "/public/$1/$2"
         },
         {
-            "src": "/",
+            "source": "/",
             "dest": "/api/index.php"
         },
         {
-            "src": "/(.*)",
+            "source": "/(.*)",
             "dest": "/api/$1"
         }
     ],
